--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "node Valid_Number/Valid_Number.js",
-
-    
-    
-    
     "stop": "node reverse/reverse.js",
     "test": "node test.js"
   },
@@ -21,12 +17,16 @@
     "axios": "^0.18.0",
     "axios-debug": "0.0.4",
     "detect-browser": "^3.0.1",
+    "grunt": "^1.0.3",
     "hls.js": "^0.10.1",
+    "latest": "^0.2.0",
     "loadjs": "^3.5.5",
     "moment": "^2.22.2",
     "npm": "^6.4.1",
     "require": "^2.4.20",
     "save-dev": "^2.0.0",
+    "uglify": "^0.1.5",
+    "uglify-js": "^3.4.9",
     "url-loader": "^1.0.1",
     "uuid": "latest"
   },
@@ -53,7 +53,7 @@
     "sinon": "^6.1.4",
     "style-loader": "^0.21.0",
     "svg-sprite-loader": "^4.1.3",
-    "webpack": "^4.16.0",
+    "webpack": "^4.28.2",
     "webpack-cli": "^3.0.8"
   }
 }
