--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Test algo",
   "main": "index.js",
   "scripts": {
-    "start": "node Valid_Number/Valid_Number.js",
+    "start": "node minRefuelStops/minRefuelStops.js",
     "stop": "node reverse/reverse.js",
-    "test": "node test.js"
+    "debug": "node inspect  minRefuelStops/minRefuelStops.js"
   },
   "pre-commit": [
     "test"
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "axios-debug": "0.0.4",
+    "debug": "^4.1.1",
     "detect-browser": "^3.0.1",
     "grunt": "^1.0.3",
     "hls.js": "^0.10.1",
@@ -38,7 +39,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
-    "eslint": "^5.2.0",
+    "eslint": "^5.11.0",
     "eslint-plugin-react": "^7.10.0",
     "expect": "^23.4.0",
     "express": "^4.16.3",
