--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "1.0.0",
   "description": "Test algo",
   "main": "index.js",
+  "module": "main.js",
   "scripts": {
-    "start": "node Integer2Roman/Integer2Roman.js",
+    "start": "node -r esm min-cost-climbing-stairs/unittest.js",
     "stop": "node Integer2Roman/Integer2Roman.js",
     "debug": "node inspect  minRefuelStops/minRefuelStops.js"
   },
   "pre-commit": [
     "test"
   ],
-  "author": "",
+  "author": "MM",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
     "axios-debug": "0.0.4",
     "debug": "^4.1.1",
     "detect-browser": "^3.0.1",
+    "esm": "^3.1.0",
     "grunt": "^1.0.3",
     "hls.js": "^0.10.1",
     "latest": "^0.2.0",
@@ -56,5 +58,16 @@
     "svg-sprite-loader": "^4.1.3",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.0.8"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/roussyPebble/Algotithms.git"
+  },
+  "keywords": [
+    "algorithm"
+  ],
+  "bugs": {
+    "url": "https://github.com/roussyPebble/Algotithms/issues"
+  },
+  "homepage": "https://github.com/roussyPebble/Algotithms#readme"
 }
