--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "str2int": "node -r esm Medium/str2int/str2int.js",
     "3Sum": "node -r esm Medium/3Sum/3Sum.js",
     "3SumClosest": "node -r esm Medium/3SumClosest/3SumClosest.js",
+    "Clumsy-Factorial": "node -r esm Medium/Clumsy-Factorial/Clumsy-Factorial.js",
     "sudoku": "node -r esm hard/sudoku/unittest.js",
     "skyline": "node -r esm hard/skyline-problem/unittest.js",
     "codility": "node -r esm codility/Yttrium_2019/unittest.js",
@@ -18,7 +19,8 @@
     "watch": "webpack --config webpack.config.js --watch",
     "webpack-server": "webpack-dev-server --config webpack.config.js --open",
     "server": "node  server.js",
-    "web-server": "http-server ./public"
+    "web-server": "http-server ./public",
+    "fill_water":"node -r esm hard/fill_water/fill_water.js"
   },
   "pre-commit": [
     "test"
