--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
         "semi": ["error", "always"],
         "no-unused-vars": ["error"],
         "no-undef": ["error"],
-        "no-console": ["warn"],
+        "no-console": ["off"],
         "no-empty-function": ["error"],
         "no-new-func": ["error"],
         "require-await": ["error"],
