--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "main.js",
   "scripts": {
     "test": "npm run lint",
+    "lint": "./node_modules/.bin/eslint ./Codility/**/*.js",
     "start": "node -r esm Unfinished/Can_I_Win/unittest.js",
     "stop": "node Integer2Roman/Integer2Roman.js",
     "str2int": "node -r esm Medium/str2int/str2int.js",
@@ -22,7 +23,9 @@
     "server": "node  server.js",
     "web-server": "http-server ./public",
     "fill_water": "node -r esm hard/fill_water/fill_water.js",
-    "interview1": "node -r esm interview/question2.js"
+    "interview1": "node -r esm interview/question2.js",
+    "palladium": "node -r esm Codility/Palladium2020/palladium2020.js",
+    "grand2018": "node -r esm Codility/grand2018/grand2018.js"
   },
   "pre-commit": [
     "test"
@@ -33,9 +36,11 @@
     "axios": "^0.18.1",
     "axios-debug": "0.0.4",
     "babel": "^6.23.0",
+    "babel-eslint": "^10.0.3",
+    "chance": "^1.1.7",
     "debug": "^4.1.1",
     "detect-browser": "^3.0.1",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.19.1",
     "esm": "^3.1.0",
     "extend": "^3.0.2",
@@ -43,8 +48,10 @@
     "hls.js": "^0.10.1",
     "http-server": "^0.11.1",
     "latest": "^0.2.0",
+    "lint": "^0.7.0",
     "loadjs": "^3.5.5",
     "moment": "^2.22.2",
+    "ndb": "^1.1.5",
     "npm": "^6.13.4",
     "require": "^2.4.20",
     "save-dev": "^2.0.0",
@@ -61,9 +68,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^1.0.1",
-    "css-loader": "^0.28.11",
+    "css-loader": "^3.4.0",
     "eslint-plugin-react": "^7.10.0",
-    "expect": "^23.4.0",
+    "expect": "^25.0.0",
     "express": "^4.16.4",
     "grunt-contrib-clean": "^2.0.0",
     "ignore-styles": "^5.0.1",
